k8s/istio/peer-authentication.yaml
# Istio Peer Authentication (mTLS)
# Issue: #2166
# Zero-trust architecture for microservice communication

apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: necpgame
spec:
  mtls:
    mode: STRICT
  selector:
    matchLabels:
      app: necpgame

---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: permissive-auth
  namespace: necpgame
spec:
  mtls:
    mode: PERMISSIVE
  selector:
    matchLabels:
      app: external-service
